plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.14'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
}

group = 'com.sprint.mission'
version = '1.2-M8'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Web
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Spring Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Spring Data JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// Spring Boot Actuator
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// Spring Boot Admin Client
	implementation 'de.codecentric:spring-boot-admin-starter-client:3.4.5'

	// AWS S3 SDK
	implementation 'software.amazon.awssdk:s3:2.31.7'

	// PostgreSQL JDBC Driver
	runtimeOnly 'org.postgresql:postgresql'

	// Swagger / OpenAPI
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.17'

	// Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// Spring Security Test
	testImplementation 'org.springframework.security:spring-security-test'

	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	testRuntimeOnly 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()

	// 테스트가 끝난 뒤 JaCoCo 리포트 자동 생성
	finalizedBy tasks.named('jacocoTestReport')
}

jacocoTestReport {
	// 리포트 생성 전에 테스트 실행
	dependsOn tasks.named('test')

	reports {
		xml.required = true
		html.required = true
		csv.required = false
	}
}